--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "deduplicator"  # ← Имя на PyPI (может отличаться от импорта)
+name = "deduplicator" 
 version = "1.0.0"
 description = "Fast duplicate file finder with optional GUI"
 readme = "README.md"
@@ -44,8 +44,8 @@ dev = [
 ]
 
 [project.scripts]
-dedup = "deduplicator.utils.cli:main"         # ← CLI без GUI
-dedup-gui = "deduplicator.gui.launcher:main"  # ← GUI (требует [gui])
+dedup-cli = "deduplicator.utils.cli:main"        
+dedup-gui = "deduplicator.gui.launcher:main"  
 
 [tool.setuptools.packages.find]
 where = ["src"]
